# trivia-game

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/trivia/: mod.rs
src/trivia/section/: mod.rs
src/trivia/section/questions/: mod.rs
