[package]
name = "trivia-game"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
fltk = { version = "1.5.2", features = ["fltk-bundled"] }
fltk-theme = "0.7.4"
rodio = "0.20.1"
rust-embed = "8.5.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"
